# terminusdb-rs

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Cargo.toml  GENERIC_SUPPORT_DEMO.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  MIGRATION-REMAP.md  README.md  test_generic_compile.sh  verify_generic_support  verify_generic_support.rs
cli/: Cargo.toml
cli/src/: formatter.rs  main.rs
cli/src/auth/: config.rs  keyring.rs
client/: Cargo.toml  DEBUG_LOGGING_README.md  tdb-failed-request-2025-07-01_11-33-09.log.json  tdb-failed-schema-2025-07-01_11-33-09.log.json
client/examples/: graphql_introspection.rs  list_databases.rs  multi_doc_versions.rs  multi_schema_insertion.rs  raw_query.rs  raw_query_count.rs  squash_example.rs  subdocument_error_handling.rs  test_commits_count.rs  test_integer_filter.rs  timeout_usage.rs
client/src/: deserialize.rs  endpoint.rs  error.rs  http.rs  import.rs  info.rs  lib.rs  query.rs  result.rs  spec.rs  versioned_id.rs
client/src/debug/: mod.rs  operation_log.rs  query_log.rs
client/src/document/: get.rs  history.rs  insert.rs  mod.rs
client/src/err/: mod.rs  tdb.rs
client/src/http/: branch.rs  branch_client.rs  change_listener.rs  changeset.rs  client.rs  collaboration.rs  concurrency_limiter.rs  database.rs  diff.rs  document.rs  graphql.rs  helpers.rs  insert_result.rs  instance.rs  log.rs  mod.rs  organization.rs  query.rs  rate_limiter.rs  remote.rs  response.rs  role.rs  schema.rs  sse_manager.rs  url_builder.rs  user.rs  versions.rs
client/src/log/: commit.rs  entity.rs  entry.rs  migration.rs  mod.rs  opts.rs
client/tests/: deserialize_test.rs  graphql_tests.rs  history_timestamp_test.rs  http_client_tests.rs  integration_tests.rs  test_bulk_get.rs  test_commit_id_as_field.rs  test_compile_time_validation.rs  test_database_cache.rs  test_debug_logging.rs  test_delete_instance.rs  test_document_if_exists.rs  test_env_auth.rs  test_existing_id_filtering.rs  test_force_insert.rs  test_get_specific_versions.rs  test_header_aware_get.rs  test_insert_and_retrieve_with_server_id.rs  test_insert_server_id_simple.rs  test_instance_versions.rs  test_integer_filtering.rs  test_key_validation.rs  test_last_query.rs  test_last_query_via_operation_log.rs  test_lexical_id_models.rs  test_list_databases.rs  test_list_instances_where_clean.rs  test_list_instances_where_numeric_types.rs  test_merge_branch.rs  test_multi_doc_versions.rs  test_multi_schema_insertion.rs  test_named_parametric_query.rs  test_npq_document_insert.rs  test_npq_raw_insert.rs  test_npq_with_woql_context.rs  test_operation_log_last_query_unit.rs  test_post_filtering_behavior.rs  test_query_instances_count.rs  test_query_string.rs  test_raw_queryable.rs  (+17 more)
crates/client/: Cargo.toml  Makefile
crates/client/examples/: custom_doc_binding.rs  debug_logging.rs  generic_model_demo.rs  graphql_introspection.rs  list_databases.rs  multi_doc_versions.rs  multi_schema_insertion.rs  raw_query.rs  raw_query_count.rs  squash_example.rs  subdocument_error_handling.rs  test_commits_count.rs  test_integer_filter.rs  test_js_woql.rs  test_server_id_for.rs  timeout_usage.rs
crates/client/src/: deserialize.rs  info.rs  lib.rs  query.rs  result.rs  spec.rs  trait.rs  versioned_id.rs  woql_helpers.rs
crates/client/tests/: deserialize_test.rs  e2e_model_roundtrip.rs  graphql_tests.rs  history_timestamp_test.rs  http_client_tests.rs  integration_tests.rs  test_bulk_get.rs  test_commit_id_as_field.rs  test_compile_time_validation.rs  test_database_cache.rs  test_debug_logging.rs  (+64 more)
crates/format/: Cargo.toml
crates/gql/: Cargo.toml
crates/orm/: Cargo.toml  README.md
crates/rug-shim/: Cargo.toml
crates/sparql/: Cargo.toml  README.md  ROADMAP.md
crates/sql/: Cargo.toml  README.md  ROADMAP.md
crates/terminusdb/: Cargo.toml
crates/woql-dsl/: Cargo.toml  README.md
crates/woql-js/: .gitignore  Cargo.toml  Justfile  README.md  build.rs
crates/xpath/: Cargo.toml  README.md  ROADMAP.md
crates/xsd/: Cargo.toml  FINDINGS.md  README.md  TESTING.md  build.rs
manager/: Cargo.toml  Justfile  package-lock.json
manager/frontend/: .gitignore
manager/src/: assets.rs  lib.rs  main.rs  manager.rs  poller.rs  state.rs
mcp-server/: Cargo.toml  README.md
mcp-server/examples/: test_messages.jsonl
mcp-server/src/: error.rs  main.rs
mcp-server/tests/: README.md  test_env_loading.rs  test_integration.rs  test_mcp_messages.rs  test_server_status.rs  test_tools.rs
relation/: Cargo.toml
relation/derive/: Cargo.toml
relation/src/: lib.rs  traits.rs
relation/tests/: success_proof.rs  woql_generation_test.rs
schema/: Cargo.toml
schema/derive/: Cargo.toml  README.md
schema/examples/: rocket_form_example.rs
schema/src/: fvec.rs  id.rs  lazy.rs  lib.rs  marker.rs  model.rs  pred.rs  primitive.rs  test.rs  ty.rs  util.rs  xsdtype.rs
schema/tests/: test_xsd_serialization.rs
test/: Cargo.toml
woql/: Cargo.toml
woql-builder/: Cargo.toml
woql-builder/examples/: commit_added_entities.rs  serialize_triple.rs
woql-builder/src/: builder.rs  expression.rs  lib.rs  path.rs  value.rs
woql-builder/tests/: test_concat_issue.rs  test_join_issue.rs
woql/src/: error.rs  lib.rs
woql2/: Cargo.toml
woql2/examples/: concatenate_fix_demo.rs  dsl_rendering.rs  review_session_query_example.rs  test_original_query_replication.rs  type_checked_query_dsl.rs
woql2/src/: collection.rs  compare.rs  control.rs  document.rs  dsl.rs  expression.rs  get.rs  lib.rs  macros.rs  misc.rs  order.rs  path.rs  path_builder.rs  query.rs  query_dsl.rs  string.rs  triple.rs  value.rs
woql2/tests/: debug_recursive_macro.rs  debug_simple_test.rs  from_path_complexity_test.rs  from_path_test.rs  macro_tests.rs  path_builder_test.rs  query_dsl_tests.rs  review_session_query_test.rs  schema_match.rs  string_date_macro_tests.rs  test_combined_parsing.rs  test_datavalue_serialization.rs  test_datetime_macro.rs  test_display.rs  test_dsl_rendering.rs  test_from_path_refactored.rs  test_from_path_simplified.rs  test_member_vec.rs  test_middle_fields.rs  test_parse_node_example.rs
(+954 files in other folders)
