[workspace]
resolver = "2"
members = [
    "client",
    "schema",
    "schema/derive",
    "types",
    "woql-builder",
    "woql2",
    "typestate",
    "woql-js",
    "mcp-server",
    "cli",
    "relation",
    "relation/derive",
    "bin",
    "manager",
    "orm",
    "test",
    "test/macros",
]

[workspace.dependencies]
# Core Rust libraries
anyhow = "1.0"
tap = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Utility crates
itertools = "0.11.0"
derive-getters = "0.3.0"
derive_builder = "0.20.0"
pseudonym = "0.2.3"

# Decimal support
rust_decimal = { version = "1.0", features = ["serde-str"] }

# Proc macro dependencies
darling = "0.20.3"
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"

# Additional dependencies used by terminusdb modules
decimal-rs = { version = "0.1", features = ["serde"] }
enum_derive = "0.1.7" 
custom_derive = "0.1.7"
enum_variant_macros = "0.3.0"
exec_time = "0.1.4"
rayon = "1.5.3"
glob = "0.3.0"
async-stream = "0.3.3"
futures-util = "0.3.23"
http = "0.2"
urlencoding = "2.1.3"
url = "2.5.2"
tempfile = "3"
subprocess = "0.2.9"
hashable = "1.0"
sha2 = "0.10.8"
serde_canonical_json = "1.0.0"
pretty_assertions = "1.4.1"
refined = "0.3.1"
heck = "0.3.2"
regex = "1"
multihash = "0.19"
tracing-subscriber = "0.3"
regexm = "0.2.1"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ParapluOU Team"]
license = "MIT OR Apache-2.0"
description = "Rust client library for TerminusDB"
repository = "https://github.com/ParapluOU/terminusdb-rs"
keywords = ["terminusdb", "database", "graph", "rdf", "semantic"]
categories = ["database", "api-bindings"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 