[package]
name = "terminusdb-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP server for TerminusDB WOQL queries"
repository.workspace = true
keywords = ["terminusdb", "mcp", "server", "woql", "query"]
categories = ["database", "network-programming"]

[[bin]]
name = "terminusdb-mcp"
path = "src/main.rs"

[dependencies]
terminusdb-client = { path = "../client" }
terminusdb-woql2 = { path = "../woql2" }
terminusdb-woql-dsl = { path = "../woql-dsl" }
rust-mcp-sdk = { version = "0.5", default-features = false, features = ["server", "macros", "2025_06_18"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
schemars = "0.8"
url = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
pretty_assertions = { workspace = true }
reqwest = { workspace = true }