[package]
name = "terminusdb-relation"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
terminusdb-schema = { path = "../schema" }
terminusdb-woql2 = { path = "../woql2" }

[dev-dependencies]
terminusdb-schema-derive = { path = "../schema/derive", features = ["relations"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"

