[package]
name = "terminusdb-woql"
version = "0.1.0"
description = "Parture helpers"
edition = "2018"
publish = false
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
serde = { workspace=true }
serde_json = {workspace = true}
itertools = "0.10.3"
#tempfile = "3"
#filepath = "*"
#subprocess = "0.2.9"
decimal-rs = "0.1.38"
chrono = "0.4"
enum_derive = "0.1.7"
custom_derive = "0.1.7"
enum_variant_macros = "0.2.0"
#command-run = "1.1.1"
exec_time = "0.1.4"
#zip = "0.6.2"
#rayon = "1.5.3"
#isahc = { version = "1.7.2", features = ["json"]  }
#glob = { version = "0.3.0"}
async-stream = "0.3.3"
futures-util = "0.3.23"

# our local libs
#parture_reflection2_simple = { path = "../../reflection2_simple/core" }
#parture_reflection2_simple_macro = { path = "../../reflection2_simple/macro" }
#parture_common = { path = "../../common" }
#parture_cache = { path = "../../cache" }
#parture_storage = { path = "../../storage" }
terminusdb-schema = { path = "../schema" }
terminusdb-schema-derive = { path = "../schema/derive" }

[lib]
path = "src/lib.rs"
#crate-type = ["cdylib"]