[package]
name = "terminusdb-woql2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminusdb-schema = { path = "../schema" }
terminusdb-schema-derive = { path = "../schema/derive" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Added dependencies required by TerminusDBModel macro
anyhow = "1.0"
tap = "1.0"
derive_builder = "0.20.2"
decimal-rs = { version = "0.1.43", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"

# Added dependencies from the workspace
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
rust_decimal = { version = "1", features = ["serde-str"] }

# Added dev-dependencies from the workspace
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] } 
