[package]
name = "terminusdb-client"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["debug-logging"]
debug-logging = []

[dependencies]
serde = { workspace=true }
serde_json = {workspace = true}
itertools = "0.10.3"

decimal-rs = "0.1.38"
chrono = { version = "0.4", features = ["serde"] }
enum_derive = "0.1.7"
custom_derive = "0.1.7"
enum_variant_macros = "0.2.0"
exec_time = "0.1.4"
rayon = "1.5.3"
glob = { version = "0.3.0"}
async-stream = "0.3.3"
futures-util = "0.3.23"
tracing = { workspace = true }
anyhow = "1.0"
tap = "1.0"
http = "0.2"
tokio = { version = "1.36", features = ["full"] }

terminusdb-schema = { path = "../schema" }
terminusdb-schema-derive = { path = "../schema/derive" }
terminusdb-woql2 = { path = "../woql2" }
terminusdb-woql-builder = { path = "../woql-builder" }
terminusdb-woql-js = { path = "../woql-js" }
terminusdb-relation = { path = "../relation" }
urlencoding = "2.1.3"
url = "2.5.2"
derive-getters = { workspace = true }
pseudonym.workspace = true
base64 = "0.22.1"

# Add reqwest as an dependency for non-wasm targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
reqwest-eventsource = "0.6"
tempfile = "3"
subprocess = "0.2.9"
# Concurrency limiting dependencies
dashmap = "5.5"
once_cell = "1.19"

[dev-dependencies]
terminusdb-bin = { path = "../bin" }
uuid = { version = "1.8", features = ["v4"] } # Add uuid for test helpers

[dependencies.uuid]
version = "1.8"
features = ["v4"]

[lib]
path = "src/lib.rs"
#crate-type = ["cdylib"]

# Generic model example requires the generic-derive feature
[[example]]
name = "generic_model_demo"
required-features = ["terminusdb-schema-derive/generic-derive"]
