[package]
name = "terminusdb-client"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["debug-logging"]
debug-logging = []

# Marker features used to disable individual test files (never enabled in CI).
# Declared here so `#[cfg(feature = "__disabled_*")]` does not trip the
# `unexpected_cfgs` lint. See the corresponding tests/ files for why each is off.
__disabled_test_last_query_via_operation_log = []
__disabled_test_lexical_id_models = []
__disabled_test_unfold_typed_instances = []

[dependencies]
serde = { workspace=true }
serde_json = {workspace = true}
itertools = "0.10.3"

decimal-rs = "0.1.38"
chrono = { version = "0.4", features = ["serde"] }
enum_derive = "0.1.7"
custom_derive = "0.1.7"
enum_variant_macros = "0.2.0"
exec_time = "0.1.4"
rayon = "1.5.3"
glob = { version = "0.3.0"}
async-stream = "0.3.3"
futures-util = "0.3.23"
tracing = { workspace = true }
anyhow = "1.0"
tap = "1.0"
http = "0.2"

terminusdb-schema = { path = "../schema" }
terminusdb-schema-derive = { path = "../schema/derive" }
terminusdb-woql2 = { path = "../woql2" }
terminusdb-woql-builder = { path = "../woql-builder" }
terminusdb-relation = { path = "../relation" }
urlencoding = "2.1.3"
url = "2.5.2"
derive-getters = { workspace = true }
pseudonym.workspace = true
base64 = "0.22.1"
thiserror.workspace = true

# Add reqwest + tokio as dependencies for non-wasm targets. tokio's `net`/`process`
# features pull `mio`, which does not build for wasm32-unknown-unknown; the only
# tokio users here live in the wasm-gated `http`/`debug` modules, so tokio is
# native-only. The wasm-reachable modules (schema/instance/deserialize types) need
# no tokio.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
# terminusdb-woql-js (default `quickjs` feature) pulls `rquickjs`/`rquickjs-sys`,
# a C QuickJS engine that needs clang and does not target wasm. It is used only in
# the wasm-gated `http::query` JS-WOQL path, so keep it native-only.
terminusdb-woql-js = { path = "../woql-js" }
reqwest-eventsource = "0.6"
tempfile = "3"
subprocess = "0.2.9"
# Concurrency limiting dependencies
dashmap = "5.5"
once_cell = "1.19"

[dev-dependencies]
terminusdb-bin = { path = "../bin" }
uuid = { version = "1.8", features = ["v4"] } # Add uuid for test helpers

[dependencies.uuid]
version = "1.8"
features = ["v4"]

[lib]
path = "src/lib.rs"
#crate-type = ["cdylib"]

# Generic model example requires the generic-derive feature
[[example]]
name = "generic_model_demo"
required-features = ["terminusdb-schema-derive/generic-derive"]
