[package]
name = "terminusdb-woql-dsl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WOQL DSL parser for TerminusDB"
repository.workspace = true
keywords = ["terminusdb", "woql", "dsl", "parser", "query"]
categories = ["database", "parser-implementations"]

[dependencies]
terminusdb-woql2 = { path = "../woql2" }
terminusdb-schema = { path = "../schema" }
nom = "7.1"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }