[package]
name = "terminusdb-xsd"
description = "XSD to TerminusDB model converter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Pure Rust XSD/XML Schema library (replaces Python xmlschema)
xmlschema = { git = "https://github.com/ParapluOU/xmlschema-rs.git" }

# JSON serialization for dumping parsed schemas
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# XSD parsing (pure Rust alternative for some use cases)
xsd-parser = "1.4.0"

# TerminusDB schema
terminusdb-schema = { path = "../schema" }

# Utilities
chrono = { workspace = true }
heck = "0.5.0"

[dev-dependencies]
schemas-dita = { git = "https://github.com/parapluou/schemas-rs" }
schemas-niso-sts = { git = "https://github.com/parapluou/schemas-rs" }
tempfile.workspace = true
# For testing
tokio = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
