[package]
name = "terminusdb-xsd"
description = "XSD to TerminusDB model converter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Pure Rust XSD/XML Schema library (replaces Python xmlschema)
xmlschema = { git = "https://github.com/parapluou/xmlschema-rs" }

# JSON serialization for dumping parsed schemas
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# XSD parsing (pure Rust alternative for some use cases)
xsd-parser = "1.4.0"

# TerminusDB schema
terminusdb-schema = { path = "../schema" }

# Utilities
chrono = { workspace = true }
heck = "0.5.0"
schemas-dita = { git = "https://github.com/parapluou/schemas-rs", version = "0.1.0" }
schemas-dita-lce = { git = "https://github.com/parapluou/schemas-rs", version = "0.1.0" }
schemas-niso-sts = { git = "https://github.com/parapluou/schemas-rs", version = "0.1.0" }

[dev-dependencies]
schemas-dita = { git = "https://github.com/parapluou/schemas-rs" }
schemas-niso-sts = { git = "https://github.com/parapluou/schemas-rs" }
# Full schemas bundle for testing problematic schemas
schemas = { git = "https://github.com/parapluou/schemas-rs", features = ["full"] }
tempfile.workspace = true
terminusdb-bin = { path = "../bin" }
terminusdb-client = { path = "../client" }
terminusdb-schema-derive = { path = "../schema/derive" }
# For testing
tokio = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
