[package]
name = "terminusdb-relation-derive"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = false  # Regular library, not a proc-macro crate

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
darling = "0.20"
heck = "0.4"